2014-02-03  Tim Horton  <timothy_horton@apple.com>

        [iOS][wk2] Temporarily disable accelerated drawing for canvas
        https://bugs.webkit.org/show_bug.cgi?id=128147

        Reviewed by Simon Fraser.

        * Shared/WebPreferencesStore.h:
        Temporarily disable accelerated canvas for WebKit2 on iOS.

2014-02-03  Anders Carlsson  <andersca@apple.com>

        Add loading property to WKWebView
        https://bugs.webkit.org/show_bug.cgi?id=128144

        Reviewed by Dan Bernstein.

        * UIProcess/API/Cocoa/WKWebView.h:
        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView isLoading]):
        * UIProcess/Cocoa/NavigationState.mm:
        (WebKit::NavigationState::willChangeIsLoading):
        (WebKit::NavigationState::didChangeIsLoading):

2014-02-03  Simon Fraser  <simon.fraser@apple.com>

        Allow WK2 to read from NSUserDefaults when it has no prefs identifier
        https://bugs.webkit.org/show_bug.cgi?id=128124

        Reviewed by Sam Weinig.
        
        WebPreferences would never read from NSUserDefaults if no identifier
        had been set, but this prevents us from reading useful debugging prefs.
        
        Fix to read pref names using a "WebKit2" prefix when no identifier
        is set.

        * UIProcess/mac/WebPreferencesMac.mm:
        (WebKit::makeKey):
        (WebKit::WebPreferences::platformInitializeStore):

2014-02-03  Jer Noble  <jer.noble@apple.com>

        [WK2] Remove the VideoPluginProxyEnabled preference in WK2
        https://bugs.webkit.org/show_bug.cgi?id=128128

        Reviewed by Brady Eidson.

        The plugin proxy is iOS WK1 only, and has no meaning in WebKit2. Just set the preference to false.

        * Shared/WebPreferencesStore.h:
        * UIProcess/API/C/WKPreferences.cpp:
        * UIProcess/API/C/WKPreferencesRef.h:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::updatePreferences):

2014-02-03  Dean Jackson  <dino@apple.com>
